# AI-KnowledgeEng

lista1/: CMakeLists.txt
lista1/data/: .gitignore  README.txt
lista1/zad1/: astar.cpp  astar.h  main.cpp  utils.h
lista2/: CMakeLists.txt  in.txt
lista2/src/: board.cpp  board.hpp  main.cpp  minimax.cpp  minimax.hpp
